No implicit global context.

--- a/examples/sandbox/sandbox.html
+++ b/examples/sandbox/sandbox.html
@@ -12,11 +12,15 @@
         <script src="../../core/sprite.js"></script>
         <script src="../../core/animator.js"></script>
         <script src="../../core/collision.js"></script>
+        <script src="../../core/keyboard-mapping.js"></script>
         <script src="../../core/k3j.js"></script>
         <!-- End imports -->
     </head>
     <body>
         <canvas id="c" width="1024" height="576"></canvas>
+        <script src="game-scene.js" defer></script>
+        <script src="player.js" defer></script>
+        <script src="enemy.js" defer></script>
         <script src="sandbox.js" defer></script>
     </body>
 </html>
