Rendering multiple words (still one-line)

--- a/examples/test.html
+++ b/examples/test.html
@@ -105,7 +105,7 @@
       $.groups.enemies.update();
       this.player.update(this.deltaTime);
 
-      $.txt.render('H', 100, 100, '#fff', 15);
+      $.txt.render('HELLO LOLO', 100, 100, '#fff', 15);
       // Render stuff
       $.cam.render($.groups.enemies);
       $.cam.render(this.player);
