Adding remaining letters and numbers

--- a/examples/test.html
+++ b/examples/test.html
@@ -105,7 +105,8 @@
       $.groups.enemies.update();
       this.player.update(this.deltaTime);
 
-      $.txt.render('ABCDEFGHI', 50, 50, '#fff', 15);
+      $.txt.render('ABCDEFGHIJKLMNOPQRSTUVWXYZ', 10, 40, '#fff', 15);
+      $.txt.render('0123456789.:[]', 10, 70, '#fff', 15);
       // Render stuff
       $.cam.render($.groups.enemies);
       $.cam.render(this.player);
