Adding punctuation and @

--- a/examples/test.html
+++ b/examples/test.html
@@ -106,7 +106,7 @@
       this.player.update(this.deltaTime);
 
       $.txt.render('ABCDEFGHIJKLMNOPQRSTUVWXYZ', 10, 40, '#fff', 15);
-      $.txt.render('0123456789.:[]', 10, 70, '#fff', 15);
+      $.txt.render('0123456789.:@', 10, 70, '#fff', 15);
       // Render stuff
       $.cam.render($.groups.enemies);
       $.cam.render(this.player);
