--- a/examples/test.html
+++ b/examples/test.html
@@ -28,6 +28,7 @@
         UP = 38,
         DOWN = 40;
 
+  debug = true;
   class Player extends Sprite {
     constructor() {
       super(100, 100, 64, 64);
