Implemented screen scaling (16:9) with box letters

--- a/examples/test.html
+++ b/examples/test.html
@@ -100,7 +100,7 @@
     }
 
     update() {
-      $.cam.clear();
+      $.cam.clear('#666');
 
       // Update stuff
       $.groups.enemies.update();
