Trying with modules

--- a/examples/test.html
+++ b/examples/test.html
@@ -7,6 +7,7 @@
 <body>
   <canvas id="c" width="1024" height="576"></canvas>
   <!-- Begin imports -->
+  <script src="../core/setup.js"></script>
   <script src="../core/input.js"></script>
   <script src="../core/math.js"></script>
   <script src="../core/vector.js"></script>
@@ -19,6 +20,7 @@
   <script src="../core/collision.js"></script>
   <script src="../core/text.js"></script>
   <script src="../core/init.js"></script>
+  <script src="../screen_shake.js"></script>
   <!-- End imports -->
 <script>
   const ENTER = 13,
